// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BumpNetworkFeesButton renders correctly 1`] = `
<PrimaryButton
  narrow={true}
  onPress={[MockFunction]}
>
  confirm
</PrimaryButton>
`;

exports[`BumpNetworkFeesButton renders correctly when disabled 1`] = `
<PrimaryButton
  disabled={true}
  narrow={true}
  onPress={[MockFunction]}
>
  confirm
</PrimaryButton>
`;

exports[`BumpNetworkFeesButton renders correctly with style 1`] = `
<PrimaryButton
  narrow={true}
  onPress={[MockFunction]}
  style={
    {
      "paddingBottom": 20,
    }
  }
>
  confirm
</PrimaryButton>
`;
